# husmow-analyser

./: .gitignore  README.md  husmow-analyser.html  husmow-cron  pyproject.toml
doc/: husmow-analysis.drawio
husmowcron/: main.py
tests/: test_husmow_cron.py
