[tool.poetry]
name = "husmow-tools"
version = "0.1.0"
description = "Tools to gather and analyse statistics from Husqvarna automowers"
authors = ["Joël Esponde <joel@esponde.net>"]
license = "GPLv3"

packages = [
    { include = "husmowcron" },
]

[tool.poetry.dependencies]
pyhusmow = '^0.2'
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
pytest-cov = "^2.7"

[tool.poetry.scripts]
husmow-cron = 'husmowcron.main:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
